--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,33 @@
 services:
+  postgres:
+    image: postgres:16
+    container_name: postgres_lms
+    restart: always
+    env_file:
+      - ./back-end/.env
+    environment:
+      POSTGRES_USER: ${DATABASE_USER} #Make sure you have these env variables setup at (env_file)
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_DB: ${DATABASE_NAME}
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
   backend:
     build:
       context: .
       dockerfile: back-end/Dockerfile
     ports:
       - "3000:3000"
-    environment:
-      - NODE_ENV=development
+    env_file:
+      - ./back-end/.env  # Load backend env variables
     volumes:
-      - ./back-end:/app  # For hot reloading
-      - /app/node_modules  # Prevents overwriting container node_modules
-    command: npm run start:dev  # Use development command instead of production
+      - ./back-end:/app  # Enable hot reloading
+      - /app/node_modules  # Prevent overwriting node_modules
+    command: npm run start:dev  # Run NestJS in dev mode
+    depends_on:
+      - postgres
 
   frontend:
     build:
@@ -18,12 +35,15 @@ services:
       dockerfile: front-end/Dockerfile
     ports:
       - "3001:3000"
-    environment:
-      - NODE_ENV=development
-      - BACKEND_URL=http://backend:3000
+    env_file:
+      - ./front-end/.env  # Load frontend env variables
     volumes:
-      - ./front-end:/app  # For hot reloading
-      - /app/node_modules  # Prevents overwriting container node_modules
+      - ./front-end:/app  # Enable hot reloading
+      - /app/node_modules  # Prevent overwriting node_modules
     command: npm run dev
     depends_on:
       - backend
+
+volumes:
+  postgres_data:
+    driver: local
