--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,5 @@
 services:
+  # PostgreSQL Service
   postgres:
     image: postgres:16
     container_name: postgres_lms
@@ -6,14 +7,34 @@ services:
     env_file:
       - ./back-end/.env
     environment:
-      POSTGRES_USER: ${DATABASE_USER} #Make sure you have these env variables setup at (env_file)
-      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
-      POSTGRES_DB: ${DATABASE_NAME}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      PGDATA: /var/lib/postgresql/data
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - postgres
 
+  # PgAdmin Service (For managing the database)
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin_container
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
+    ports:
+      - ${PGADMIN_PORT:-5050}:80
+    networks:
+      - postgres
+    volumes:
+      - pgadmin:/var/lib/pgadmin
+    restart: unless-stopped
+
+  # Backend Service (NestJS)
   backend:
     build:
       context: .
@@ -21,14 +42,15 @@ services:
     ports:
       - "3000:3000"
     env_file:
-      - ./back-end/.env  # Load backend env variables
+      - ./back-end/.env
     volumes:
-      - ./back-end:/app  # Enable hot reloading
-      - /app/node_modules  # Prevent overwriting node_modules
-    command: npm run start:dev  # Run NestJS in dev mode
+      - ./back-end:/app
+      - backend_node_modules:/app/node_modules # Named volume for node_modules
+    command: npm run start:dev
     depends_on:
       - postgres
 
+  # Frontend Service (Next.js)
   frontend:
     build:
       context: .
@@ -36,14 +58,24 @@ services:
     ports:
       - "3001:3000"
     env_file:
-      - ./front-end/.env  # Load frontend env variables
+      - ./front-end/.env
     volumes:
-      - ./front-end:/app  # Enable hot reloading
-      - /app/node_modules  # Prevent overwriting node_modules
+      - ./front-end:/app
+      - frontend_node_modules:/app/node_modules # Named volume for node_modules
     command: npm run dev
     depends_on:
       - backend
 
+# Volumes for persistent storage
 volumes:
   postgres_data:
     driver: local
+  pgadmin:
+    driver: local
+  backend_node_modules: # Added volume for backend node_modules
+  frontend_node_modules: # Added volume for frontend node_modules
+
+# Networks for container communication
+networks:
+  postgres:
+    driver: bridge
