--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,29 +7,34 @@ services:
     env_file:
       - ./back-end/.env
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: "${DB_USERNAME:-user}"
+      POSTGRES_PASSWORD: "${DB_PASSWORD:-pwd}"
+      POSTGRES_DB: "${DB_NAME:-lms}"
       PGDATA: /var/lib/postgresql/data
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
-      - postgres
+      - lms_network  
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USERNAME:-user} -d ${DB_NAME:-lms}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
-  # PgAdmin Service (For managing the database)
+  # PgAdmin Service
   pgadmin:
     image: dpage/pgadmin4
     container_name: pgadmin_container
     environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
+      PGADMIN_DEFAULT_EMAIL: "${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}"
+      PGADMIN_DEFAULT_PASSWORD: "${PGADMIN_DEFAULT_PASSWORD:-admin}"
       PGADMIN_CONFIG_SERVER_MODE: 'False'
     ports:
-      - ${PGADMIN_PORT:-5050}:80
+      - "${PGADMIN_PORT:-5050}:80"
     networks:
-      - postgres
+      - lms_network
     volumes:
       - pgadmin:/var/lib/pgadmin
     restart: unless-stopped
@@ -45,10 +50,13 @@ services:
       - ./back-end/.env
     volumes:
       - ./back-end:/app
-      - backend_node_modules:/app/node_modules # Named volume for node_modules
+      - backend_node_modules:/app/node_modules
     command: npm run start:dev
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
+    networks:
+      - lms_network
 
   # Frontend Service (Next.js)
   frontend:
@@ -61,10 +69,17 @@ services:
       - ./front-end/.env
     volumes:
       - ./front-end:/app
-      - frontend_node_modules:/app/node_modules # Named volume for node_modules
+      - frontend_node_modules:/app/node_modules
     command: npm run dev
     depends_on:
       - backend
+    networks:
+      - lms_network
+
+# Define Networks
+networks:
+  lms_network:
+    driver: bridge
 
 # Volumes for persistent storage
 volumes:
@@ -72,10 +87,5 @@ volumes:
     driver: local
   pgadmin:
     driver: local
-  backend_node_modules: # Added volume for backend node_modules
-  frontend_node_modules: # Added volume for frontend node_modules
-
-# Networks for container communication
-networks:
-  postgres:
-    driver: bridge
+  backend_node_modules:
+  frontend_node_modules:
