--- a/back-end/.env.example
+++ b/back-end/.env.example
@@ -1,3 +1,9 @@
-DATABASE_USER=
-DATABASE_PASSWORD=
-DATABASE_NAME=
+# Database Configuration
+DB_HOST=           # e.g., postgres container name or localhost for local dev
+DB_PORT=           # Default PostgreSQL port
+DB_USERNAME=       # Change to your database username
+DB_PASSWORD=       # Change to your database password
+DB_NAME=           # Your database name
+
+# Development Stage
+NODE_ENV=development        # Set this to 'production' for production environments
